--- a/analysis/clustering_visualization.ipynb
+++ b/analysis/clustering_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "478b42e8",
    "metadata": {},
    "outputs": [],
@@ -24,14 +24,6 @@
     "import plotly.graph_objs as go\n",
     "from plotly.offline import init_notebook_mode\n",
     "\n",
-    "CLEANED_BETA_SUBJECT = [\n",
-    "    \"../CleandDataV1/2017\",\n",
-    "    \"../CleandDataV1/2018\",\n",
-    "    \"../CleandDataV1/2020\",\n",
-    "    \"../CleandDataV1/2024\",\n",
-    "    \"../CleandDataV1/2025\",\n",
-    "]\n",
-    "\n",
     "SORTED_BLOCK_NAMES = [\n",
     "    \"a_hvha\",\n",
     "    \"a_hvla\",\n",
@@ -43,21 +35,12 @@
     "    \"b_nvla\",\n",
     "    \"medi\",\n",
     "    \"wandering\",\n",
-    "]\n",
-    "\n",
-    "FOUR_CONDITIONS = [\"audio\"] * 4 + [\"breath\"] * 4 + [\"meditation\", \"wandering\"]\n",
-    "VALENCE_CONDITIONS = (\n",
-    "    [\"h_valence\"] * 2\n",
-    "    + [\"n_valence\"] * 2\n",
-    "    + [\"h_valence\"] * 2\n",
-    "    + [\"n_valence\"] * 2\n",
-    "    + [\"meditation\", \"wandering\"]\n",
-    ")"
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "ac22c46f",
    "metadata": {},
    "outputs": [],
@@ -65,53 +48,24 @@
     "\"\"\"\n",
     "    load features from csv\n",
     "\"\"\"\n",
-    "dir_name = \"eeg_features1\"\n",
-    "result = load_data_from_csv(dir_name)\n",
-    "\n",
-    "all_blocks = []\n",
-    "for b in VALENCE_CONDITIONS:\n",
-    "    all_blocks.extend([b] * 13)\n"
+    "dir_name = \"eeg_features2\"\n",
+    "result = load_data_from_csv(dir_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "51c8a6ea",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "        <script type=\"text/javascript\">\n",
-       "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
-       "        if (window.MathJax && window.MathJax.Hub && window.MathJax.Hub.Config) {window.MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
-       "        if (typeof require !== 'undefined') {\n",
-       "        require.undef(\"plotly\");\n",
-       "        requirejs.config({\n",
-       "            paths: {\n",
-       "                'plotly': ['https://cdn.plot.ly/plotly-2.16.1.min']\n",
-       "            }\n",
-       "        });\n",
-       "        require(['plotly'], function(Plotly) {\n",
-       "            window._Plotly = Plotly;\n",
-       "        });\n",
-       "        }\n",
-       "        </script>\n",
-       "        "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is needed so we can display plotly plots properly\n",
-    "init_notebook_mode(connected=True)\n"
+    "init_notebook_mode(connected=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "003b204a",
    "metadata": {},
    "outputs": [],
@@ -123,15 +77,27 @@
     "from plotly.subplots import make_subplots\n",
     "\n",
     "\n",
-    "def get_filter_pattern(feature: str = \"ALL\") -> str:\n",
+    "def get_filter_pattern(feature: str = \"ALL\", channel: str = '') -> str:\n",
+    "    prefix = ''\n",
+    "    if len(channel) > 0:\n",
+    "        prefix = f'^{channel}'\n",
+    "\n",
     "    # get_other feature_pattern = \".*(?<!GAMMA|BETA2|BETA1|ALPHA|THETA|DELTA)$\"\n",
     "    if feature == \"ALL\":\n",
-    "        return \".*(?<!sdf)$\"\n",
-    "    return f\".*{feature}$\"  # f\"^{feature}.*(?<!BETA2)$\"\n",
+    "        return f\"{prefix}.*(?<!sdf)$\"\n",
+    "    \n",
+    "    return f\"{prefix}.*{feature}$\"  # f\"^{feature}.*(?<!BETA2)$\"\n",
     "\n",
+    "def get_processed_feature(feature: str, channel: str, result: pd.DataFrame, subjects: list=[]):\n",
+    "    pattern = get_filter_pattern(feature, channel)\n",
+    "    normalized_eeg_features, filtered_result, label_list = get_filtered_data(\n",
+    "        result, subjects, pattern\n",
+    "    )\n",
+    "    print('filtered', normalized_eeg_features.shape)\n",
+    "    return normalized_eeg_features, filtered_result\n",
     "\n",
-    "def get_umap(feature: str, result: pd.DataFrame, subjects: list = []):\n",
-    "    pattern = get_filter_pattern(feature)\n",
+    "def get_umap(feature: str, channel: str, result: pd.DataFrame, all_blocks: list, subjects: list = []):\n",
+    "    pattern = get_filter_pattern(feature, channel)\n",
     "    normalized_eeg_features, filtered_result, label_list = get_filtered_data(\n",
     "        result, subjects, pattern\n",
     "    )\n",
@@ -147,14 +113,25 @@
     "    proj_2d.columns = [\"C1_2d\", \"C2_2d\"]\n",
     "    return pd.concat([filtered_result, proj_2d], axis=1, join=\"inner\")\n",
     "\n",
+    "def get_pca(feature: str, channel: str, result: pd.DataFrame, subjects: list=[]):\n",
+    "    normalized_eeg_features, filtered_result = get_processed_feature(feature, channel, result, subjects)\n",
     "\n",
-    "def save_result(feature: str, subjects: list, plotX: pd.DataFrame, condition: str):\n",
+    "    # Run PCA\n",
+    "    pca = PCA(n_components=2)\n",
+    "    proj_2d = pd.DataFrame(pca.fit_transform(normalized_eeg_features))\n",
+    "\n",
+    "    # Concatanate the umap points and original data\n",
+    "    filtered_result = filtered_result.reset_index()\n",
+    "    proj_2d.columns = [\"C1_2d\", \"C2_2d\"]\n",
+    "    return pd.concat([filtered_result['Subject'], proj_2d], axis=1, join=\"inner\")\n",
+    "\n",
+    "def show_result(feature: str, subjects: list, plotX: pd.DataFrame, conditions: list, to_save: bool=False):\n",
     "    title = f\"EEG {feature} (average spectral power per trial)\"\n",
     "\n",
     "    figures = []\n",
     "    for subj in subjects:\n",
     "        df = plotX[plotX[\"Subject\"] == subj]\n",
-    "        figures.append(px.scatter(df, x=\"C1_2d\", y=\"C2_2d\", color=\"condition\"))\n",
+    "        figures.append(px.scatter(df, x=\"C1_2d\", y=\"C2_2d\", color=conditions, opacity=0.5))\n",
     "\n",
     "    fig = make_subplots(\n",
     "        rows=int((len(figures) / 2) + (len(figures) % 2)),\n",
@@ -177,27 +154,127 @@
     "    )\n",
     "\n",
     "    name = \",\".join(str(s) for s in subjects)\n",
+    "    filename = f\"results/valence/{feature}_{name}.png\"\n",
+    "    if to_save:\n",
+    "        fig.write_image(filename)\n",
     "\n",
-    "    fig.write_image(f\"results/{condition}_{feature}_{name}.png\")\n",
-    "    fig.show()"
+    "    fig.show()\n",
+    "    \n",
+    "def show_pca_matrix(\n",
+    "    band: str, \n",
+    "    channel: str, \n",
+    "    subject: int, \n",
+    "    result: pd.DataFrame, \n",
+    "    all_blocks: list, \n",
+    "    n_components: int,\n",
+    "    to_save: bool=False,\n",
+    "):\n",
+    "    normalized_eeg_features, _ = get_processed_feature(band, channel, result, [subject])\n",
+    "    pca = PCA(n_components=n_components)\n",
+    "    proj_2d = pd.DataFrame(pca.fit_transform(normalized_eeg_features))\n",
+    "    labels = {\n",
+    "        str(i): f\"PC {i+1} ({var:.1f}%)\"\n",
+    "        for i, var in enumerate(pca.explained_variance_ratio_ * 100)\n",
+    "    }\n",
+    "\n",
+    "    identifier = str(subject) + f'_{band}_{channel}_channel'\n",
+    "    total_var = pca.explained_variance_ratio_.sum() * 100\n",
+    "    fig = px.scatter_matrix(\n",
+    "        proj_2d,\n",
+    "        labels=labels,\n",
+    "        dimensions=range(len(labels)),\n",
+    "        color=all_blocks,\n",
+    "        opacity=0.5,\n",
+    "        title=f'{identifier} Total Explained Variance: {total_var:.2f}%',\n",
+    "    )\n",
+    "    fig.update_traces(diagonal_visible=False)\n",
+    "    fig.update_layout(\n",
+    "        height=1000, width=1000, margin=dict(r=0, b=0, l=0)\n",
+    "    )\n",
+    "\n",
+    "    filename = f\"results/{identifier}_PCA_breakdown.png\"\n",
+    "    if to_save:\n",
+    "        fig.write_image(filename)\n",
+    "        \n",
+    "    fig.show()\n",
+    "\n",
+    "#     target = 4\n",
+    "#     proj_2d = pd.concat([proj_2d[0], proj_2d[target]], axis=1, join=\"inner\")\n",
+    "#     proj_2d.columns = [0, 1]\n",
+    "\n",
+    "#     target_str = str(target)\n",
+    "#     labels = { '0': labels['0'], target_str: labels[target_str]}\n",
+    "#     fig = px.scatter_matrix(\n",
+    "#         proj_2d,\n",
+    "#         labels=labels,\n",
+    "#         dimensions=range(len(labels)),\n",
+    "#         color=all_blocks * len(subjects),\n",
+    "#         opacity=0.5,\n",
+    "#         title=f'Total Explained Variance: {total_var:.2f}%',\n",
+    "#     )\n",
+    "#     fig.update_traces(diagonal_visible=False)\n",
+    "#     fig.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72b69300",
+   "id": "7e911ac8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "FOUR_CONDITIONS = [\"audio\"] * 4 + [\"breath\"] * 4 + [\"meditation\", \"wandering\"]\n",
+    "VALENCE_CONDITIONS = (\n",
+    "    [\"h_valence\"] * 2\n",
+    "    + [\"n_valence\"] * 2\n",
+    "    + [\"h_valence\"] * 2\n",
+    "    + [\"n_valence\"] * 2\n",
+    "    + [\"meditation\", \"wandering\"]\n",
+    ")\n",
+    "\n",
+    "AROUSAL_CONDITIONS = (\n",
+    "    [\"h_arousal\", \"l_arousal\"] * 4\n",
+    "    + [\"meditation\", \"wandering\"]\n",
+    ")\n",
+    "\n",
     "name_to_batch = {\n",
     "    \"f\": [2017, 2018, 2020, 2024, 2025, 2026],\n",
     "    \"s\": [2028, 2029, 2031, 2032, 2033, 2035],\n",
     "    \"t\": [2036, 2039, 2040, 2041, 2042, 2043, 2044, 2045],\n",
     "}\n",
-    "subjects = name_to_batch[\"f\"]\n",
     "\n",
-    "feature = \"GAMMA\"\n",
-    "plotX = get_umap(feature, result, subjects)"
+    "subjects = name_to_batch['s']\n",
+    "all_blocks = []\n",
+    "for b in FOUR_CONDITIONS:\n",
+    "    all_blocks.extend([b] * 13)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa7ed303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # https://plotly.com/python/pca-visualization/\n",
+    "# ['A', 'B', 'C', 'D']\n",
+    "for band in ['ALL', 'DELTA', 'THETA', 'ALPHA', 'BETA1', 'BETA2', 'GAMMA']:\n",
+    "    for ch in ['A', 'B', 'C', 'D']: \n",
+    "        plotX = get_pca(band, ch ,result, subjects)\n",
+    "        feature = f'valence_{band}_{ch}_channel_PCA'\n",
+    "        show_result(feature, subjects, plotX, all_blocks, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "801ca2c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_components=6\n",
+    "for s in subjects:\n",
+    "    show_pca_matrix('THETA', 'C', s, result, all_blocks, n_components, True)"
    ]
   },
   {
@@ -207,25 +284,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_result(feature, subjects, plotX, \"valence\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b9eb48f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = px.scatter(\n",
-    "    plotX,\n",
-    "    x=\"C1_2d\",\n",
-    "    y=\"C2_2d\",\n",
-    "    color=\"condition\",\n",
-    "    facet_col=\"Subject\",\n",
-    "    facet_col_wrap=1,\n",
-    ")\n",
-    "fig.show()"
+    "for f in ['ALL', 'DELTA', 'THETA', 'ALPHA', 'BETA1', 'BETA2', 'GAMMA']:\n",
+    "    plotX = get_umap(f, result, all_blocks, subjects)\n",
+    "    feature = f'{f}_UMAP'\n",
+    "    show_result(feature, subjects, plotX, condition)"
    ]
   },
   {
@@ -243,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1bc646a4",
    "metadata": {},
    "outputs": [],
@@ -303,82 +365,6 @@
     "    mode=\"markers\",\n",
     "    textfont=dict(size=10),\n",
     ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c10d1777",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from plotly.subplots import make_subplots\n",
-    "\n",
-    "\n",
-    "def get_label_str(label_list: list) -> list:\n",
-    "    label_map = [\"nvla\", \"nvha\", \"hvla\", \"hvha\"]\n",
-    "    return [label_map[v] for v in label_list]\n",
-    "\n",
-    "\n",
-    "# Define color sets of paintings\n",
-    "colors_map = {\n",
-    "    \"a_hvha\": \"rgb(177, 127, 38)\",\n",
-    "    \"a_hvla\": \"rgb(205, 152, 36)\",\n",
-    "    \"a_nvha\": \"rgb(99, 79, 37)\",\n",
-    "    \"a_nvla\": \"rgb(124, 103, 37)\",\n",
-    "    \"b_hvha\": \"rgb(33, 75, 99)\",\n",
-    "    \"b_hvla\": \"rgb(79, 129, 102)\",\n",
-    "    \"b_nvha\": \"rgb(151, 179, 100)\",\n",
-    "    \"b_nvla\": \"rgb(175, 49, 35)\",\n",
-    "    \"medi\": \"rgb(18, 36, 37)\",\n",
-    "    \"wandering\": \"rgb(56, 75, 126)\",\n",
-    "    \"nvla\": \"rgb(175, 49, 35)\",\n",
-    "    \"nvha\": \"rgb(99, 79, 37)\",\n",
-    "    \"hvla\": \"rgb(205, 152, 36)\",\n",
-    "    \"hvha\": \"rgb(33, 75, 99)\",\n",
-    "}\n",
-    "\n",
-    "# Create subplots, using 'domain' type for pie charts\n",
-    "specs = [\n",
-    "    [{\"type\": \"domain\"}, {\"type\": \"domain\"}],\n",
-    "    [{\"type\": \"domain\"}, {\"type\": \"domain\"}],\n",
-    "]\n",
-    "fig = make_subplots(rows=2, cols=2, specs=specs)\n",
-    "\n",
-    "\n",
-    "label_df = pd.DataFrame(get_label_str(label_list))\n",
-    "# Rename the columns\n",
-    "label_df.columns = [\"label\"]\n",
-    "plotX = pd.concat([normalized_eeg_features, label_df], axis=1, join=\"inner\")\n",
-    "\n",
-    "num_cluster = 4\n",
-    "groupBy = \"label\"\n",
-    "# Define pie charts\n",
-    "for i in range(num_cluster):\n",
-    "    c = plotX[plotX[\"Cluster\"] == i].groupby([groupBy]).agg({groupBy: \"count\"})\n",
-    "    labels = c.index\n",
-    "    values = c[groupBy].tolist()\n",
-    "    colors = [colors_map[l] for l in labels]\n",
-    "    fig.add_trace(\n",
-    "        go.Pie(\n",
-    "            labels=labels,\n",
-    "            values=values,\n",
-    "            title_text=f\"Cluster {i}\",\n",
-    "            textinfo=\"label+percent\",\n",
-    "            marker_colors=colors,\n",
-    "        ),\n",
-    "        int(i / 2 + 1),\n",
-    "        int(i % 2 + 1),\n",
-    "    )\n",
-    "\n",
-    "# Tune layout and hover info\n",
-    "fig.update(\n",
-    "    layout_title_text=title,\n",
-    "    layout_showlegend=False,\n",
-    ")\n",
-    "\n",
-    "fig = go.Figure(fig)\n",
-    "fig.show()\n"
    ]
   },
   {
