--- a/analysis/supervised_learning.ipynb
+++ b/analysis/supervised_learning.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "d653b6bf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/tpan/miniconda3/envs/MM/lib/python3.8/site-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import MultiIndex, Int64Index\n",
-      "2023-03-02 19:57:36.005261: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Basic imports\n",
     "import numpy as np\n",
@@ -42,7 +31,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "import shap"
+    "import shap\n",
+    "\n",
+    "NUM_LABEL_PER_SUBJECT = 130"
    ]
   },
   {
@@ -55,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2600, 128) 128 2600\n"
+      "(2600, 768) 768 2600\n"
      ]
     }
    ],
@@ -64,7 +55,7 @@
     "    load features from csv\n",
     "\"\"\"\n",
     "\n",
-    "dir_name = \"eeg_features\"\n",
+    "dir_name = \"eeg_features1\"\n",
     "result = load_data_from_csv(dir_name)\n",
     "\n",
     "all_label_array, label_list = get_labels_from_result(result)\n",
@@ -73,9 +64,9 @@
     ")\n",
     "# all_feature_array = all_feature_array.drop([\"index\"], axis=1)\n",
     "\n",
-    "filter_pattern = \".*(?<!BETA2)$\"\n",
-    "only_specific_feature = \".*GAMMA$\"\n",
-    "all_feature_array = all_feature_array.filter(regex=only_specific_feature)\n",
+    "# filter_pattern = \".*(?<!BETA2)$\"\n",
+    "# only_specific_feature = \".*GAMMA$\"\n",
+    "# all_feature_array = all_feature_array.filter(regex=only_specific_feature)\n",
     "feature_names = all_feature_array.columns\n",
     "print(all_feature_array.shape, len(feature_names), len(label_list))"
    ]
@@ -813,7 +804,7 @@
    "source": [
     "colors = [\"c\", \"y\", \"m\", \"r\"]\n",
     "\n",
-    "NUM_LABEL_PER_SUBJECT = 130\n",
+    "\n",
     "accuracy = []\n",
     "gkf = GroupKFold()\n",
     "label_array = np.array(label_list)\n",
@@ -893,10 +884,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4beb1a4b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading ../CleandDataV1/2017 data...\n",
+      "Loading ../CleandDataV1/2018 data...\n"
+     ]
+    }
+   ],
    "source": [
     "from data_utils import (\n",
     "    load_data_from_dir,\n",
@@ -940,10 +940,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d4b06a40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 label: 27, 1 label: 233\n",
+      "(260, 12288, 128) (260,) (260,)\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.keras import utils as np_utils\n",
     "from models import train_with_cnn\n",
