--- a/analysis/analysis_notebook.ipynb
+++ b/analysis/analysis_notebook.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e1f4b9f7",
    "metadata": {},
    "outputs": [
@@ -82,15 +82,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading ../CleandDataV2/2032 data...\n",
-      "Loading ../CleandDataV2/2033 data...\n",
-      "Loading ../CleandDataV2/2035 data...\n"
+      "Loading ../CleandDataV2/2032 data...\n"
      ]
     }
    ],
    "source": [
     "all_dirs = []\n",
-    "subjects = [\"2032\", \"2033\", \"2035\"]\n",
+    "subjects = [\"2032\"]\n",
     "for subj in subjects:\n",
     "    all_dirs.append(f\"../CleandDataV2/{subj}\")\n",
     "\n",
