--- a/analysis/clustering_visualization.ipynb
+++ b/analysis/clustering_visualization.ipynb
@@ -25,17 +25,17 @@
     "from plotly.offline import init_notebook_mode\n",
     "\n",
     "SORTED_BLOCK_NAMES = [\n",
-    "    \"a_hvha\",\n",
-    "    \"a_hvla\",\n",
-    "    \"a_nvha\",\n",
-    "    \"a_nvla\",\n",
-    "    \"b_hvha\",\n",
-    "    \"b_hvla\",\n",
-    "    \"b_nvha\",\n",
-    "    \"b_nvla\",\n",
-    "    \"medi\",\n",
-    "    \"wandering\",\n",
-    "]"
+    "    \"audio_hvha\",\n",
+    "    \"audio_hvla\",\n",
+    "    \"audio_nvha\",\n",
+    "    \"audio_nvla\",\n",
+    "    \"breath_hvha\",\n",
+    "    \"breath_hvla\",\n",
+    "    \"breath_nvha\",\n",
+    "    \"breath_nvla\",\n",
+    "    \"meditation\",\n",
+    "    \"mind wandering\",\n",
+    "]\n"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "# This is needed so we can display plotly plots properly\n",
-    "init_notebook_mode(connected=True)"
+    "init_notebook_mode(connected=True)\n"
    ]
   },
   {
@@ -77,26 +77,52 @@
     "from plotly.subplots import make_subplots\n",
     "\n",
     "\n",
-    "def get_filter_pattern(feature: str = \"ALL\", channel: str = '') -> str:\n",
-    "    prefix = ''\n",
+    "COLOR_MAP = {\n",
+    "    \"audio_hvha\": \"red\",\n",
+    "    \"audio_hvla\": \"magenta\",\n",
+    "    \"audio_nvha\": \"green\",\n",
+    "    \"audio_nvla\": \"olive\",\n",
+    "}\n",
+    "V_COLOR_MAP = {\n",
+    "    \"hvha\": \"red\",\n",
+    "    \"hvla\": \"magenta\",\n",
+    "    \"nvha\": \"green\",\n",
+    "    \"nvla\": \"olive\",\n",
+    "    \"lvha\": \"blue\",\n",
+    "    \"lvla\": \"steelblue\",\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def get_filter_pattern(feature: str = \"ALL\", channel: str = \"\") -> str:\n",
+    "    prefix = \"\"\n",
     "    if len(channel) > 0:\n",
-    "        prefix = f'^{channel}'\n",
+    "        prefix = f\"^{channel}\"\n",
     "\n",
     "    # get_other feature_pattern = \".*(?<!GAMMA|BETA2|BETA1|ALPHA|THETA|DELTA)$\"\n",
     "    if feature == \"ALL\":\n",
     "        return f\"{prefix}.*(?<!sdf)$\"\n",
-    "    \n",
+    "\n",
     "    return f\"{prefix}.*{feature}$\"  # f\"^{feature}.*(?<!BETA2)$\"\n",
     "\n",
-    "def get_processed_feature(feature: str, channel: str, result: pd.DataFrame, subjects: list=[]):\n",
+    "\n",
+    "def get_processed_feature(\n",
+    "    feature: str, channel: str, result: pd.DataFrame, subjects: list = []\n",
+    "):\n",
     "    pattern = get_filter_pattern(feature, channel)\n",
     "    normalized_eeg_features, filtered_result, label_list = get_filtered_data(\n",
     "        result, subjects, pattern\n",
     "    )\n",
-    "    print('filtered', normalized_eeg_features.shape)\n",
+    "    print(\"filtered\", normalized_eeg_features.shape)\n",
     "    return normalized_eeg_features, filtered_result\n",
     "\n",
-    "def get_umap(feature: str, channel: str, result: pd.DataFrame, all_blocks: list, subjects: list = []):\n",
+    "\n",
+    "def get_umap(\n",
+    "    feature: str,\n",
+    "    channel: str,\n",
+    "    result: pd.DataFrame,\n",
+    "    all_blocks: list,\n",
+    "    subjects: list = [],\n",
+    "):\n",
     "    pattern = get_filter_pattern(feature, channel)\n",
     "    normalized_eeg_features, filtered_result, label_list = get_filtered_data(\n",
     "        result, subjects, pattern\n",
@@ -113,8 +139,11 @@
     "    proj_2d.columns = [\"C1_2d\", \"C2_2d\"]\n",
     "    return pd.concat([filtered_result, proj_2d], axis=1, join=\"inner\")\n",
     "\n",
-    "def get_pca(feature: str, channel: str, result: pd.DataFrame, subjects: list=[]):\n",
-    "    normalized_eeg_features, filtered_result = get_processed_feature(feature, channel, result, subjects)\n",
+    "\n",
+    "def get_pca(feature: str, channel: str, result: pd.DataFrame, subjects: list = []):\n",
+    "    normalized_eeg_features, filtered_result = get_processed_feature(\n",
+    "        feature, channel, result, subjects\n",
+    "    )\n",
     "\n",
     "    # Run PCA\n",
     "    pca = PCA(n_components=2)\n",
@@ -123,15 +152,31 @@
     "    # Concatanate the umap points and original data\n",
     "    filtered_result = filtered_result.reset_index()\n",
     "    proj_2d.columns = [\"C1_2d\", \"C2_2d\"]\n",
-    "    return pd.concat([filtered_result['Subject'], proj_2d], axis=1, join=\"inner\")\n",
+    "    return pd.concat([filtered_result[\"Subject\"], proj_2d], axis=1, join=\"inner\")\n",
     "\n",
-    "def show_result(feature: str, subjects: list, plotX: pd.DataFrame, conditions: list, to_save: bool=False):\n",
+    "\n",
+    "def show_result(\n",
+    "    feature: str,\n",
+    "    subjects: list,\n",
+    "    plotX: pd.DataFrame,\n",
+    "    conditions: list,\n",
+    "    to_save: bool = False,\n",
+    "):\n",
     "    title = f\"EEG {feature} (average spectral power per trial)\"\n",
     "\n",
     "    figures = []\n",
     "    for subj in subjects:\n",
     "        df = plotX[plotX[\"Subject\"] == subj]\n",
-    "        figures.append(px.scatter(df, x=\"C1_2d\", y=\"C2_2d\", color=conditions, opacity=0.5))\n",
+    "        figures.append(\n",
+    "            px.scatter(\n",
+    "                df,\n",
+    "                x=\"C1_2d\",\n",
+    "                y=\"C2_2d\",\n",
+    "                color=df[\"condition\"],\n",
+    "                color_discrete_map=V_COLOR_MAP,\n",
+    "                opacity=0.6,\n",
+    "            )\n",
+    "        )\n",
     "\n",
     "    fig = make_subplots(\n",
     "        rows=int((len(figures) / 2) + (len(figures) % 2)),\n",
@@ -142,32 +187,40 @@
     "    )\n",
     "\n",
     "    for i, figure in enumerate(figures):\n",
-    "        showlegend = True if i == 0 else False\n",
     "        for trace in range(len(figure[\"data\"])):\n",
-    "            figure[\"data\"][trace].update(showlegend=showlegend)\n",
+    "            figure[\"data\"][trace].update()\n",
     "            fig.append_trace(\n",
     "                figure[\"data\"][trace], row=int(i / 2 + 1), col=int(i % 2 + 1)\n",
     "            )\n",
+    "\n",
+    "    # Deduplicate the legends\n",
+    "    names = set()\n",
+    "    fig.for_each_trace(\n",
+    "        lambda trace: trace.update(showlegend=False)\n",
+    "        if (trace.name in names)\n",
+    "        else names.add(trace.name)\n",
+    "    )\n",
     "\n",
     "    fig.update_layout(\n",
     "        height=1000, width=1000, title_text=title, margin=dict(r=0, b=0, l=0)\n",
     "    )\n",
     "\n",
     "    name = \",\".join(str(s) for s in subjects)\n",
-    "    filename = f\"results/valence/{feature}_{name}.png\"\n",
+    "    filename = f\"results/{feature}_{name}.png\"\n",
     "    if to_save:\n",
     "        fig.write_image(filename)\n",
     "\n",
     "    fig.show()\n",
-    "    \n",
+    "\n",
+    "\n",
     "def show_pca_matrix(\n",
-    "    band: str, \n",
-    "    channel: str, \n",
-    "    subject: int, \n",
-    "    result: pd.DataFrame, \n",
-    "    all_blocks: list, \n",
+    "    band: str,\n",
+    "    channel: str,\n",
+    "    subject: int,\n",
+    "    result: pd.DataFrame,\n",
+    "    all_blocks: list,\n",
     "    n_components: int,\n",
-    "    to_save: bool=False,\n",
+    "    to_save: bool = False,\n",
     "):\n",
     "    normalized_eeg_features, _ = get_processed_feature(band, channel, result, [subject])\n",
     "    pca = PCA(n_components=n_components)\n",
@@ -177,43 +230,34 @@
     "        for i, var in enumerate(pca.explained_variance_ratio_ * 100)\n",
     "    }\n",
     "\n",
-    "    identifier = str(subject) + f'_{band}_{channel}_channel'\n",
+    "    identifier = str(subject) + f\"_{band}_{channel}_channel\"\n",
     "    total_var = pca.explained_variance_ratio_.sum() * 100\n",
     "    fig = px.scatter_matrix(\n",
     "        proj_2d,\n",
     "        labels=labels,\n",
     "        dimensions=range(len(labels)),\n",
     "        color=all_blocks,\n",
-    "        opacity=0.5,\n",
-    "        title=f'{identifier} Total Explained Variance: {total_var:.2f}%',\n",
+    "        color_discrete_map=V_COLOR_MAP,\n",
+    "        opacity=0.6,\n",
+    "        title=f\"{identifier} Total Explained Variance: {total_var:.2f}%\",\n",
     "    )\n",
     "    fig.update_traces(diagonal_visible=False)\n",
-    "    fig.update_layout(\n",
-    "        height=1000, width=1000, margin=dict(r=0, b=0, l=0)\n",
+    "\n",
+    "    # Deduplicate the legends\n",
+    "    names = set()\n",
+    "    fig.for_each_trace(\n",
+    "        lambda trace: trace.update(showlegend=False)\n",
+    "        if (trace.name in names)\n",
+    "        else names.add(trace.name)\n",
     "    )\n",
+    "\n",
+    "    fig.update_layout(height=1000, width=1000, margin=dict(r=0, b=0, l=0))\n",
     "\n",
     "    filename = f\"results/{identifier}_PCA_breakdown.png\"\n",
     "    if to_save:\n",
     "        fig.write_image(filename)\n",
-    "        \n",
-    "    fig.show()\n",
     "\n",
-    "#     target = 4\n",
-    "#     proj_2d = pd.concat([proj_2d[0], proj_2d[target]], axis=1, join=\"inner\")\n",
-    "#     proj_2d.columns = [0, 1]\n",
-    "\n",
-    "#     target_str = str(target)\n",
-    "#     labels = { '0': labels['0'], target_str: labels[target_str]}\n",
-    "#     fig = px.scatter_matrix(\n",
-    "#         proj_2d,\n",
-    "#         labels=labels,\n",
-    "#         dimensions=range(len(labels)),\n",
-    "#         color=all_blocks * len(subjects),\n",
-    "#         opacity=0.5,\n",
-    "#         title=f'Total Explained Variance: {total_var:.2f}%',\n",
-    "#     )\n",
-    "#     fig.update_traces(diagonal_visible=False)\n",
-    "#     fig.show()"
+    "    fig.show()\n"
    ]
   },
   {
@@ -232,10 +276,7 @@
     "    + [\"meditation\", \"wandering\"]\n",
     ")\n",
     "\n",
-    "AROUSAL_CONDITIONS = (\n",
-    "    [\"h_arousal\", \"l_arousal\"] * 4\n",
-    "    + [\"meditation\", \"wandering\"]\n",
-    ")\n",
+    "AROUSAL_CONDITIONS = [\"h_arousal\", \"l_arousal\"] * 4 + [\"meditation\", \"wandering\"]\n",
     "\n",
     "name_to_batch = {\n",
     "    \"f\": [2017, 2018, 2020, 2024, 2025, 2026],\n",
@@ -243,10 +284,52 @@
     "    \"t\": [2036, 2039, 2040, 2041, 2042, 2043, 2044, 2045],\n",
     "}\n",
     "\n",
-    "subjects = name_to_batch['s']\n",
+    "subjects = name_to_batch[\"s\"]\n",
     "all_blocks = []\n",
-    "for b in FOUR_CONDITIONS:\n",
-    "    all_blocks.extend([b] * 13)  "
+    "for b in SORTED_BLOCK_NAMES:\n",
+    "    all_blocks.extend([b] * 13)\n",
+    "\n",
+    "result[\"condition\"] = all_blocks * len(subjects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c142d239",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio_blocks = [\"audio_hvha\", \"audio_hvla\", \"audio_nvha\", \"audio_nvla\"]\n",
+    "\n",
+    "mask = result[\"condition\"].isin(audio_blocks)\n",
+    "audio_only = result[mask].drop(\"condition\", axis=1)\n",
+    "\n",
+    "# True label as conditions\n",
+    "# all_blocks = []\n",
+    "# for b in audio_blocks:\n",
+    "#     all_blocks.extend([b] * 13)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "879f65d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# True label as user ratings\n",
+    "v_r = audio_only[\"Valence\"].tolist()\n",
+    "a_r = audio_only[\"Arousal\"].tolist()\n",
+    "all_blocks = []\n",
+    "for i in range(audio_only.shape[0]):\n",
+    "    valence = \"hv\"\n",
+    "    if v_r[i] < 0.4:\n",
+    "        valence = \"lv\"\n",
+    "    elif v_r[i] < 0.6:\n",
+    "        valence = \"nv\"\n",
+    "\n",
+    "    arousal = \"ha\" if a_r[i] > 0.5 else \"la\"\n",
+    "    all_blocks.append(valence + arousal)\n"
    ]
   },
   {
@@ -256,13 +339,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " # https://plotly.com/python/pca-visualization/\n",
-    "# ['A', 'B', 'C', 'D']\n",
-    "for band in ['ALL', 'DELTA', 'THETA', 'ALPHA', 'BETA1', 'BETA2', 'GAMMA']:\n",
-    "    for ch in ['A', 'B', 'C', 'D']: \n",
-    "        plotX = get_pca(band, ch ,result, subjects)\n",
-    "        feature = f'valence_{band}_{ch}_channel_PCA'\n",
-    "        show_result(feature, subjects, plotX, all_blocks, False)"
+    "# https://plotly.com/python/pca-visualization/\n",
+    "for band in [\"ALL\", \"DELTA\", \"THETA\", \"ALPHA\", \"BETA1\", \"BETA2\", \"GAMMA\"]:\n",
+    "    for ch in [\"A\", \"B\", \"C\", \"D\"]:\n",
+    "        plotX = get_pca(band, ch, audio_only, subjects)\n",
+    "        feature = f\"rating_audio_{band}_{ch}_channel_PCA\"\n",
+    "        plotX[\"condition\"] = all_blocks\n",
+    "        show_result(feature, subjects, plotX, all_blocks, False)\n"
    ]
   },
   {
@@ -272,22 +355,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_components=6\n",
+    "n_components = 6\n",
+    "audio_only[\"condition\"] = all_blocks\n",
     "for s in subjects:\n",
-    "    show_pca_matrix('THETA', 'C', s, result, all_blocks, n_components, True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5cf95317",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for f in ['ALL', 'DELTA', 'THETA', 'ALPHA', 'BETA1', 'BETA2', 'GAMMA']:\n",
-    "    plotX = get_umap(f, result, all_blocks, subjects)\n",
-    "    feature = f'{f}_UMAP'\n",
-    "    show_result(feature, subjects, plotX, condition)"
+    "    conditions = audio_only[audio_only[\"Subject\"] == s][\"condition\"]\n",
+    "    show_pca_matrix(\n",
+    "        \"ALPHA\",\n",
+    "        \"C\",\n",
+    "        s,\n",
+    "        audio_only.drop(\"condition\", axis=1),\n",
+    "        conditions,\n",
+    "        n_components,\n",
+    "        False,\n",
+    "    )\n"
    ]
   },
   {
@@ -297,45 +377,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reference https://www.mikulskibartosz.name/pca-how-to-choose-the-number-of-components/\n",
-    "reduced_data = PCA(n_components=0.95).fit_transform(normalized_eeg_features)\n",
-    "normalized_eeg_features = pd.DataFrame(reduced_data)\n",
-    "normalized_eeg_features.head()\n"
+    "from sklearn.metrics.cluster import rand_score\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "\n",
+    "def do_hierarchical_clustering(normalized_eeg_features):\n",
+    "    from sklearn.cluster import AgglomerativeClustering\n",
+    "    import time\n",
+    "\n",
+    "    print(\"Compute unstructured hierarchical clustering...\")\n",
+    "    st = time.time()\n",
+    "    ward = AgglomerativeClustering(n_clusters=4, linkage=\"ward\").fit(\n",
+    "        normalized_eeg_features\n",
+    "    )\n",
+    "    elapsed_time = time.time() - st\n",
+    "    print(f\"Elapsed time: {elapsed_time:.2f}s\")\n",
+    "    #     print(f\"Number of points: {ward.labels_.size}\")\n",
+    "    return ward.labels_\n",
+    "\n",
+    "\n",
+    "def do_kmeans(normalized_eeg_features):\n",
+    "    from sklearn.cluster import KMeans\n",
+    "\n",
+    "    kmeans = KMeans(init=\"k-means++\", n_clusters=4, n_init=2)\n",
+    "    kmeans.fit(normalized_eeg_features)\n",
+    "    # Find which cluster each data-point belongs to\n",
+    "    return kmeans.predict(normalized_eeg_features)\n",
+    "\n",
+    "\n",
+    "heatmap_data = []\n",
+    "s = 2031\n",
+    "for ch in [\"A\", \"B\", \"C\", \"D\"]:\n",
+    "    scores = defaultdict()\n",
+    "    for band in [\"ALL\", \"DELTA\", \"THETA\", \"ALPHA\", \"BETA1\", \"BETA2\", \"GAMMA\"]:\n",
+    "        # reference https://www.mikulskibartosz.name/pca-how-to-choose-the-number-of-components/\n",
+    "        normalized_eeg_features, _ = get_processed_feature(\n",
+    "            band, ch, audio_only.drop(\"condition\", axis=1), [s]\n",
+    "        )\n",
+    "        reduced_data = PCA(n_components=0.95).fit_transform(normalized_eeg_features)\n",
+    "        normalized_eeg_features = pd.DataFrame(reduced_data)\n",
+    "        # print('components', normalized_eeg_features.shape)\n",
+    "\n",
+    "        true_labels = audio_only[audio_only[\"Subject\"] == s][\"condition\"]\n",
+    "        score = rand_score(true_labels, do_kmeans(normalized_eeg_features))\n",
+    "        # print(f'{band}:{ch}:{score}')\n",
+    "        scores[band] = score\n",
+    "    heatmap_data.append(scores)\n",
+    "heatmap_data = pd.DataFrame(heatmap_data, index=[\"A\", \"B\", \"C\", \"D\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bc646a4",
+   "id": "391b0d35",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.mixture import GaussianMixture\n",
-    "# import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "\n",
-    "# gmm = GaussianMixture(n_components=2).fit(normalized_eeg_features)\n",
-    "# clusters = gmm.predict(normalized_eeg_features)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fbe1e793",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.cluster import AgglomerativeClustering\n",
-    "import time\n",
-    "\n",
-    "print(\"Compute unstructured hierarchical clustering...\")\n",
-    "st = time.time()\n",
-    "ward = AgglomerativeClustering(n_clusters=4, linkage=\"ward\").fit(\n",
-    "    normalized_eeg_features\n",
-    ")\n",
-    "elapsed_time = time.time() - st\n",
-    "clusters = ward.labels_\n",
-    "print(f\"Elapsed time: {elapsed_time:.2f}s\")\n",
-    "print(f\"Number of points: {clusters.size}\")\n"
+    "f, ax = plt.subplots(figsize=(9, 6))\n",
+    "ax.set_title(f\"{s} subject Kmeans clustering rand index\")\n",
+    "sns.heatmap(heatmap_data, annot=True, fmt=\".3f\", linewidths=0.5, ax=ax, cmap=\"crest\")"
    ]
   },
   {
@@ -360,11 +463,38 @@
     "        \"rgba(0, 255, 200, 0.8)\",\n",
     "        \"rgba(0, 128, 200, 0.8)\",\n",
     "    ],\n",
-    "    title,\n",
+    "    \"hello\",\n",
     "    False,\n",
     "    mode=\"markers\",\n",
     "    textfont=dict(size=10),\n",
-    ")\n"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cf95317",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for f in [\"ALL\", \"DELTA\", \"THETA\", \"ALPHA\", \"BETA1\", \"BETA2\", \"GAMMA\"]:\n",
+    "    plotX = get_umap(f, result, all_blocks, subjects)\n",
+    "    feature = f\"{f}_UMAP\"\n",
+    "    show_result(feature, subjects, plotX, condition)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bc646a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.mixture import GaussianMixture\n",
+    "# import matplotlib.pyplot as plt\n",
+    "\n",
+    "# gmm = GaussianMixture(n_components=2).fit(normalized_eeg_features)\n",
+    "# clusters = gmm.predict(normalized_eeg_features)\n"
    ]
   },
   {
@@ -374,13 +504,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clustering\n",
-    "# kmeans = KMeans(init=\"k-means++\", n_clusters=4, n_init=2)\n",
-    "# kmeans.fit(normalized_eeg_features)\n",
-    "# #Find which cluster each data-point belongs to\n",
-    "# clusters = kmeans.predict(normalized_eeg_features)\n",
-    "\n",
-    "\n",
     "# from sklearn.cluster import DBSCAN\n",
     "# from sklearn import metrics\n",
     "\n",
